--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_spinkit: ^4.1.2+1
+  flushbar: ^1.10.0
+  flutter_bloc: ^6.1.2
+  google_fonts: ^1.1.0
+  equatable: ^1.2.5
   flutter:
     sdk: flutter
 
